--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
+    "@babel/plugin-transform-react-jsx": "^7.22.3",
     "@babel/preset-env": "7.9.0",
-    "@babel/preset-react": "7.9.4",
+    "@babel/preset-react": "^7.9.4",
     "babel-loader": "8.1.0",
     "file-loader": "6.0.0",
     "nodemon": "^2.0.22",
@@ -43,6 +44,7 @@
     "@hot-loader/react-dom": "16.13.0",
     "@material-ui/core": "4.9.8",
     "@material-ui/icons": "4.9.1",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
